<resources>
    <string name="app_name">Aula2aN</string>
    <string name="txt_gorjeta">Gorjeta</string>
    <string name="txt_valor">Valor</string>
    <string name="txt_total">Total</string>
    <string name="txt_database">Database</string>
    <string name="txt_re">RE</string>
    <string name="txt_nome">Nome</string>
    <string name="txt_dataadmissao">Data de Admissão</string>
    <string name="txt_salario">Salário</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_buscar">Buscar</string>
    <string name="txt_excluir">Excluir</string>
    <string name="txt_alterar">Alterar</string>
    <string name="txt_desenho">Desenho</string>
    <string name="txt_sensor">Sensores</string>
</resources>